# propit

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  README.md  justfile  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: python-publish.yml  test.yml
docs/: index.md  installation.md  usage.md
src/propit/: __init__.py  cli.py  constant.py  convert.py  read.py
tests/: __init__.py  test_converter.py  test_propit.py
tests/test_data/percolator-output-small/: make-pin.pin  percolator.feature.txt  percolator.target.psms.txt
