[project]
name = "propit"
version = "0.0.5"
description = "Glue and Grease for Proteomics Pipelines."
readme = "README.md"
authors = [
  {name = "Fabian Egli", email = "fabianegli@users.noreply.github.com"}
]
maintainers = [
  {name = "Fabian Egli", email = "fabianegli@users.noreply.github.com"}
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Topic :: File Formats",
    "Environment :: Console",
    "Development Status :: 2 - Pre-Alpha"
]
license = {text = "GPLv3"}
dependencies = [
  "pandas",
  "peptacular"
]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb", # debugging
]
dev = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb", # debugging
    "pre-commit"
]

[project.urls]
bugs = "https://github.com/fabianegli/propit/issues"
changelog = "https://github.com/fabianegli/propit/blob/master/changelog.md"
homepage = "https://github.com/fabianegli/propit"

[project.scripts]
propit = "propit.cli:main"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
